<resources>
    <string name="app_name">GastosDeViagens</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="calcular">Calcular</string>
    <string name="valor_total_rs">R$ 0</string>
    <string name="Preencha_os_campos">Preencha todos os campos!</string>
    <string name="Erro_0">Por favor, informe valores válidos!</string>
</resources>